--- a/ebooks/modern/history_gy/caomangyixong/caomanghero01.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero01.html
@@ -444,5 +444,5 @@
 正副贡使被安置在嘉宾馆，从人仍旧住在船上，因为行动不得自由，所以情绪都很
 坏。汪直打算利用这一点，策动那六百人在中秋之夕，鼓噪闹事，以为桴鼓之应。
 如今从谨慎二字着眼，汪直决定作罢，为的是人多嘴杂，密谋有外泄之虞。
-<hr><a href="caomanghero02.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero02.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
