--- a/ebooks/modern/history_gy/caomangyixong/caomanghero02.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero02.html
@@ -527,5 +527,5 @@
 <p>
 　　于是两人促膝接手，用低得仅仅只有对方才听得清楚的声音，密密商量了大半
 夜，方始妥当。
-<hr><a href="caomanghero03.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero03.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
