--- a/ebooks/modern/history_gy/caomangyixong/caomanghero03.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero03.html
@@ -661,5 +661,5 @@
 你扑个空，还教你回不得家乡，见不得爹娘！”
 <p>
 　　念头转定，脚步移动，折而往西，以巍巍的六和塔为目标，大踏步奔了去。
-<hr><a href="caomanghero04.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero04.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
