--- a/ebooks/modern/history_gy/caomangyixong/caomanghero04.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero04.html
@@ -638,5 +638,5 @@
 　　“好！有志气！”徐海翘一翘大拇指，然后急转直下收束：“现在说，都是白
 说。让你再静一静，好好想一想。你相信我，就不要多问，总归一句，我晓得你的
 心、你的意思就是了。”
-<hr><a href="caomanghero05.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero05.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
