--- a/ebooks/modern/history_gy/caomangyixong/caomanghero05.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero05.html
@@ -679,5 +679,5 @@
 <p>
 　　“哪个稀罕你的报答？”春红将脸一扬，又很快地将头一扭，长辫子飞了起来，
 几乎扫着阿狗的眼角。
-<hr><a href="caomanghero06.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero06.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
