--- a/ebooks/modern/history_gy/caomangyixong/caomanghero06.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero06.html
@@ -713,5 +713,5 @@
 　　自我震动的明山，不暇深思，退了出来，一个人在后山溪涧深处，抱头沉思；
 好久，才能将心境平静下来——由于他作了一个勇敢的决定，方能从心底拔去使他
 不安的种子。
-<hr><a href="caomanghero07.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero07.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
