--- a/ebooks/modern/history_gy/caomangyixong/caomanghero07.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero07.html
@@ -556,5 +556,5 @@
 <p>
 　　设总督，换巡抚，而“代天巡方”，职权可大可小的浙江巡按御史亦换了人，
 新任巡按是汪直的同乡，籍隶安徽绩溪的胡宗宪。浙江的局面，完全变过了。
-<hr><a href="caomanghero08.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero08.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
