--- a/ebooks/modern/history_gy/caomangyixong/caomanghero08.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero08.html
@@ -700,5 +700,5 @@
 <p>
 　　于是胡宗宪秘密献计；他说一句，赵文华应一声，百依百顺，笑容始终没有消
 灭过。
-<hr><a href="caomanghero09.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero09.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
