--- a/ebooks/modern/history_gy/caomangyixong/caomanghero09.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero09.html
@@ -751,5 +751,5 @@
 <p>
 　　谁知一样都不是。阿狗竟如老僧入定般，坐在凳子上闭目养神。这太出胡宗宪
 的意料，惊奇之余，深为满意，觉得完全可以放心了。
-<hr><a href="caomanghero10.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero10.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
