--- a/ebooks/modern/history_gy/caomangyixong/caomanghero10.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero10.html
@@ -1525,5 +1525,5 @@
 在卢镗面前，你不必太客气，你可以指挥他的！”
 <p>
 　　胡宗宪不知他这样嘱咐，是何用意？只好先记在心里再说。
-<hr><a href="caomanghero11.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero11.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
