--- a/ebooks/modern/history_gy/caomangyixong/caomanghero11.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero11.html
@@ -659,5 +659,5 @@
 <p>
 　　“正是这话！”胡宗宪大为欣慰，“大人的风度越好，我们替大人化解打点，
 越容易着力。”
-<hr><a href="caomanghero12.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero12.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
