--- a/ebooks/modern/history_gy/caomangyixong/caomanghero13.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero13.html
@@ -653,5 +653,5 @@
 　　“不敢，不敢！要封爵也该华公当先，还有严阁老父子。轮我还早。”
 <p>
 　　“不要这么说！”赵文华拍拍他的背勉励着，“好自为之。”
-<hr><a href="caomanghero14.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero14.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
