--- a/ebooks/modern/history_gy/caomangyixong/caomanghero14.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero14.html
@@ -693,5 +693,5 @@
 <p>
 　　其实是陈东想派个亲信去。商量下来，自然照他的意思，所派的这个人名叫江
 稻生，当时就跟着徐海走了。
-<hr><a href="caomanghero15.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero15.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
