--- a/ebooks/modern/history_gy/caomangyixong/caomanghero15.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero15.html
@@ -663,5 +663,5 @@
 为适宜。
 <p>
 　　然而，有一项窒碍，沙船不能入内河。这个难题如何解决？且听听罗龙文的！
-<hr><a href="caomanghero16.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero16.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
