--- a/ebooks/modern/history_gy/caomangyixong/caomanghero16.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero16.html
@@ -452,5 +452,5 @@
 <p>
 　　“不大合情理的事还有。他说有三个疑问，其实只有一个，就是怕官军欺人，
 到时候收拾他们。倒是有个疑问，应该说在前面；反而摆到最后，不晓得是何道理？”
-<hr><a href="caomanghero17.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero17.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
