--- a/ebooks/modern/history_gy/caomangyixong/caomanghero17.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero17.html
@@ -752,5 +752,5 @@
 了一整天的功夫，便可办妥，谁知耽搁了５天之久，原因是粉蝶全家都搬走了。阿
 狗料想空手而回，粉蝶一定不肯罢休；所以细心寻访，费了好大的事方始找着，接
 到桐乡。
-<hr><a href="caomanghero18.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero18.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
