--- a/ebooks/modern/history_gy/caomangyixong/caomanghero18.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero18.html
@@ -834,5 +834,5 @@
 　　“第二是什么？”
 <p>
 　　“第二么？”徐海在她颊上轻轻拧了一把，“照我看，梁红玉绝不如你漂亮！”
-<hr><a href="caomanghero19.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero19.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
