--- a/ebooks/modern/history_gy/caomangyixong/caomanghero19.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero19.html
@@ -565,5 +565,5 @@
 <p>
 　　“那就不必理它了。‘见怪不怪，其怪自败’。谣言不去传它，自然而然就没
 有了。”阿狗站起身说：“我亦是关心的缘故，所以问一问你，现在可以放心了。”
-<hr><a href="caomanghero20.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero20.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
