--- a/ebooks/modern/history_gy/caomangyixong/caomanghero20.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero20.html
@@ -1000,5 +1000,5 @@
 探罗龙文的。试探的结果，已很明显，也能满意：第一罗龙文对于徐海亦在被捕之
 列，确不知情；第二、罗龙文毕竟也珍惜自己的性命。因而可以用威胁的手段使他
 就范。
-<hr><a href="caomanghero21.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero21.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
