--- a/ebooks/modern/history_gy/caomangyixong/caomanghero21.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero21.html
@@ -1613,5 +1613,5 @@
 <p>
 　　意在言外，徐海当然听得出来。不过，他此时还不愿有所表示，一切一切，都
 要等见着了胡宗宪再说。
-<hr><a href="caomanghero22.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero22.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
