--- a/ebooks/modern/history_gy/caomangyixong/caomanghero22.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero22.html
@@ -446,5 +446,5 @@
 　　此言一出，胡宗宪如释重负，但阿狗的疑问，一个接一个，使得胡宗宪竟有些
 穷于应付。不过，反复质疑辨难，亦就等于商量好了一切细节。到得黄昏，一切计
 划皆已停当，阿狗连晚饭都顾不得吃，便赶回桐乡，连夜部署一切。
-<hr><a href="caomanghero23.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero23.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
