--- a/ebooks/modern/history_gy/caomangyixong/caomanghero23.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero23.html
@@ -654,5 +654,5 @@
 <p>
 　　最后这句话打动了罗龙文，毅然决然地说：“好吧！完全照你的意思：我替你
 在胡总督面前担待。”
-<hr><a href="caomanghero24.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero24.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
