--- a/ebooks/modern/history_gy/caomangyixong/caomanghero24.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero24.html
@@ -1630,5 +1630,5 @@
 　　就这一句话，勾起徐海无限的离情别绪，只是看王翠翘神色恬静，自己倒不便
 太显得儿女情长，拣那别后必得王翠翘自己当心的事，嘱咐了几句，同床而不同梦
 地睡了。
-<hr><a href="caomanghero25.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero25.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
