--- a/ebooks/modern/history_gy/caomangyixong/caomanghero26.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero26.html
@@ -1505,5 +1505,5 @@
 　　“是的！”阿狗又问：“我们俩的事，要不要附带跟胡总督说一说？”
 <p>
 　　罗龙文沉吟了一会答说：“其中颇有曲折，你说不便，暂时不必提！”
-<hr><a href="caomanghero27.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero27.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
