--- a/ebooks/modern/history_gy/caomangyixong/caomanghero27.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero27.html
@@ -879,5 +879,5 @@
 　　于是一拥而前，团团围住吴四，前后夹护着将他押解到总督衙门。阿狗劝刘二
 同行，刘二不肯，表示无论如何要等朱友仁回来作个交代，才能离去。这个是很够
 朋友的做法，阿狗不愿勉强，只谆谆叮嘱，一等事完，务必到总督衙门去找他。
-<hr><a href="caomanghero28.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero28.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
