--- a/ebooks/modern/history_gy/caomangyixong/caomanghero28.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero28.html
@@ -647,5 +647,5 @@
 交了出去。
 <p>
 　　“请你派人去领，扣掉你的价款，余下的存在你典当里。”
-<hr><a href="caomanghero29.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero29.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
