--- a/ebooks/modern/history_gy/caomangyixong/caomanghero29.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero29.html
@@ -1091,5 +1091,5 @@
 <p>
 　　“原来如此！妙，妙。”赵忠抚掌称赏，“小华，事不宜迟，明天就派专人去
 搬‘赛虚中’。”
-<hr><a href="caomanghero30.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero30.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
