--- a/ebooks/modern/history_gy/caomangyixong/caomanghero30.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero30.html
@@ -600,5 +600,5 @@
 　　这当然是件不容易打听的事，只知道总督衙门的罗师爷与赵总管各得三千两，
 是赏金中数目最大的。赵忠得巨赏在意料之中，罗龙文凭何功劳得三千两银子？少
 不得有人困惑，甚至啧有烦言。
-<hr><a href="caomanghero31.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero31.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
