--- a/ebooks/modern/history_gy/caomangyixong/caomanghero31.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero31.html
@@ -670,5 +670,5 @@
 面子，接见他一次，说几句抚慰的话。”
 <p>
 　　“那无所谓，你们去安排好了。”
-<hr><a href="caomanghero32.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero32.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
