--- a/ebooks/modern/history_gy/caomangyixong/caomanghero32.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero32.html
@@ -650,5 +650,5 @@
 <p>
 　　于是陪着徐海吃过饭，闲谈了一会，等他上床，罗龙文便邀阿狗与胡元规一起
 去看胡宗宪，准备有所陈述。
-<hr><a href="caomanghero33.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero33.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
