--- a/ebooks/modern/history_gy/caomangyixong/caomanghero33.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero33.html
@@ -1103,5 +1103,5 @@
 你可别跟他一般见识。”
 <p>
 　　“我知道。如果是那样子，我就不往下说了。”
-<hr><a href="caomanghero34.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero34.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
