--- a/ebooks/modern/history_gy/caomangyixong/caomanghero34.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero34.html
@@ -1008,5 +1008,5 @@
 <p>
 　　“好！”罗龙文接口，“就这么说！我可以帮你布置，家具不消说，字画古董，
 一切摆设，亦都现成。后天接他进屋，让他来个意外之喜。”
-<hr><a href="caomanghero35.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero35.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
