--- a/ebooks/modern/history_gy/caomangyixong/caomanghero35.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero35.html
@@ -764,5 +764,5 @@
 <p>
 　　“不死又如何？忍辱偷生，让你一想起你姐姐就难过？”阿狗茫然！遥望天际
 渺渺，叹口气说：“‘不知生，焉知死！’”
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 </body></html>
