--- a/ebooks/modern/history_gy/caomangyixong/caomanghero12.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero12.html
@@ -712,5 +712,5 @@
 　　“是！”永年正色答说，“我劝赵大人谋定后动，切忌操之过急。”
 <p>
 　　“敬受教！”
-<hr><a href="caomanghero13.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero13.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
