--- a/ebooks/modern/history_gy/caomangyixong/caomanghero25.html
+++ b/ebooks/modern/history_gy/caomangyixong/caomanghero25.html
@@ -758,5 +758,5 @@
 <p>
 　　于是，他也不惊动还在圆襄王之梦的朱友仁和刘二，跟店家结了帐，悄悄出门，
 直奔总督行辕，求见胡宗宪。
-<hr><a href="caomanghero26.html">下一章</a>　<a href="_content.html">回目录</a>
+<hr><a href="caomanghero26.html">下一章</a>　<a href="content.html">回目录</a>
 </body></html>
