--- a/ebooks/modern/history_gy/yuleifuyun/ylfy01.html
+++ b/ebooks/modern/history_gy/yuleifuyun/ylfy01.html
@@ -329,5 +329,5 @@
 <p>
 　　贺客都认为赵恒惕将他比作“先天下之忧而忧，后天下之乐而乐”的范仲淹，
 恭维得体。可惜他缺少吕洞宾那种点铁成金的神通。
-<hr><a href="ylfy02.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="ylfy02.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
