--- a/ebooks/modern/history_gy/yuleifuyun/ylfy02.html
+++ b/ebooks/modern/history_gy/yuleifuyun/ylfy02.html
@@ -937,5 +937,5 @@
 　　“哪能弗去？”
 <p>
 　　“那就一言为定吧！”毕庶澄说完，掉头就走，步履很急，倒像逃走似的。
-<hr><a href="ylfy03.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="ylfy03.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
