--- a/ebooks/modern/history_gy/yuleifuyun/ylfy03.html
+++ b/ebooks/modern/history_gy/yuleifuyun/ylfy03.html
@@ -266,5 +266,5 @@
 省长；邓如琢为赣军总司令，李定奎为江西省长。此外又“封”了一批镇守使，连
 清帮大字辈的张仁奎，亦当上了南通镇守使。一时弹冠相庆，将星闪耀，夫子庙的
 歌台酒家着实做了一笔好生意。
-<hr><a href="ylfy04.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="ylfy04.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
