--- a/ebooks/modern/history_gy/yuleifuyun/ylfy04.html
+++ b/ebooks/modern/history_gy/yuleifuyun/ylfy04.html
@@ -482,5 +482,5 @@
 　　郭松龄的职务改由韩麟春继任，他亦照郭松龄一样，综理三、四两军的军务。
 张学良暂且韬光养晦、啸傲烟霞——在郭松龄倒戈那段期间，张学良心力交瘁，一
 天睡不到两三小时，不能不靠鸦片来支持，就此抽上瘾了。
-<hr><a href="ylfy05.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="ylfy05.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
