--- a/ebooks/modern/history_gy/yuleifuyun/ylfy05.html
+++ b/ebooks/modern/history_gy/yuleifuyun/ylfy05.html
@@ -195,5 +195,5 @@
 　　这副挽联稀松平常，词既不工，情亦不切，而所以受人注目的缘故是，陆建章
 为徐树铮所杀；开吊时，徐世昌送的就是这副挽联。以挽陆之联挽徐，显然他亦认
 为这是因果报应。
-<hr><a href="ylfy06.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="ylfy06.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
