--- a/ebooks/modern/history_gy/yuleifuyun/ylfy06.html
+++ b/ebooks/modern/history_gy/yuleifuyun/ylfy06.html
@@ -682,5 +682,5 @@
 徐州、郑州各驻重兵，构成一个铁三角，巩固北方为主的战略。在这个战略之下，
 津浦线的保卫战显得格外重要，决定由直鲁联军作先锋，张学良与韩麟春随后率军
 南下。
-<hr><a href="ylfy07.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="ylfy07.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
