--- a/ebooks/modern/history_gy/yuleifuyun/ylfy07.html
+++ b/ebooks/modern/history_gy/yuleifuyun/ylfy07.html
@@ -526,5 +526,5 @@
 　　于是刘戴明弄到三个吸毒的乞儿，在六月三日晚上，让他们过足了瘾，带到一
 家澡塘子洗澡换衣服，其中一个颇为机警，在澡塘子中溜走；另外两个于深夜带到
 吊桥附近，用刺刀刺杀，弃尸而去。
-<hr><a href="ylfy08.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="ylfy08.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
