--- a/ebooks/modern/history_gy/yuleifuyun/ylfy08.html
+++ b/ebooks/modern/history_gy/yuleifuyun/ylfy08.html
@@ -504,5 +504,5 @@
 　　所谓“大家”，便是东北的领袖人物，应张学良之约，陆续到了。由郑谦宣读
 了通电的稿子，也就等于提出了善后的办法；由大家承认，杨、常是经过他们讯问
 以后，“俯首服罪”，因而一致决定，“即时宣布罪状，按法执行。”
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 </body></html>
