--- a/ebooks/modern/history_gy/qinguan/qgc01.html
+++ b/ebooks/modern/history_gy/qinguan/qgc01.html
@@ -569,5 +569,5 @@
 　　提到逝去的母亲，汤斌忍不住要掉眼泪；用手指拭眼角，从他的家世谈起。
 <p>
 　　汤斌是明朝武官的家世，原籍滁州，在英宗正统年间方始迁到河南睢州。
-<hr><a href="qgc02.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="qgc02.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
