--- a/ebooks/modern/history_gy/qinguan/qgc02.html
+++ b/ebooks/modern/history_gy/qinguan/qgc02.html
@@ -1530,5 +1530,5 @@
 药；到年底病愈，正待启程回京时，来了一道上谕，指河南正主考黄钅心、副主考
 丁澎，主持试务有弊，为言官参劾，奉旨：“黄钅心着革职严拿察究，丁澎亦着革
 职察议。”
-<hr><a href="qgc03.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="qgc03.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
