--- a/ebooks/modern/history_gy/qinguan/qgc03.html
+++ b/ebooks/modern/history_gy/qinguan/qgc03.html
@@ -743,5 +743,5 @@
 无友。”所以每到邮亭驿站，先读题壁的诗。
 <p>
 　　看起来他像个书呆子，其实伤心大别有怀抱，是一种无言的抗议。
-<hr><a href="qgc04.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="qgc04.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
