--- a/ebooks/modern/history_gy/qinguan/qgc04.html
+++ b/ebooks/modern/history_gy/qinguan/qgc04.html
@@ -1162,5 +1162,5 @@
 　　不久，由于叶方蔼病故，徐元文罢职。汤斌又被派为明史总裁官之一，并受命
 纂修世祖实录。就这样由侍读升为詹事府左春坊左庶子，再升为内阁学士，充大清
 会典副总裁官，其时为康熙二十三年二月。
-<hr><a href="qgc05.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="qgc05.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
