--- a/ebooks/modern/history_gy/qinguan/qgc05.html
+++ b/ebooks/modern/history_gy/qinguan/qgc05.html
@@ -1883,5 +1883,5 @@
 来快得很！五人之墓，至今香火不绝；如今的汤公祠，在汤公生前，是祷祝他长生
 的生词，将来殁而为神，自然照样享受香火，俎豆千秋，永世不休。一个人不要争
 一时，要争千秋，汤公就是榜样。”
-<hr><a href="qgc06.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="qgc06.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
