--- a/ebooks/modern/history_gy/qinguan/qgc06.html
+++ b/ebooks/modern/history_gy/qinguan/qgc06.html
@@ -1385,5 +1385,5 @@
 不如汤斌那样坚苦卓绝。
 <p>
 　　康熙一朝，清官最多，但清官册上的第一名，无论如何不能不推汤斌！
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 </body></html>
