--- a/ebooks/modern/history_gy/wangzaojun/wzj01.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj01.html
@@ -672,6 +672,6 @@
 　　这话说得再透彻不过，韩、赵家亦都以此语告诫爱女。见此光景，王夫人自然深感欣
 慰，因而离思别恨也就比较容易排遣了。
 
-<hr><a href="wzj02.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj02.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
