--- a/ebooks/modern/history_gy/wangzaojun/wzj04.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj04.html
@@ -213,6 +213,6 @@
 <p>
 　　听得这话，皇帝急急掩图，神色间似有余悸。当然一切都不问了。
 
-<hr><a href="wzj05.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj05.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
