--- a/ebooks/modern/history_gy/wangzaojun/wzj05.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj05.html
@@ -368,6 +368,6 @@
 皇帝的姊妹称为“长公主”，这也就是以呼韩邪为皇帝的妹婿。因为公主目前只有一位，如
 说已远嫁塞外，将来另配驸马时，就会使人诧异。这个建议，当然亦蒙嘉纳。
 
-<hr><a href="wzj06.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj06.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
