--- a/ebooks/modern/history_gy/wangzaojun/wzj06.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj06.html
@@ -354,6 +354,6 @@
 <p>
 　　“看来，”林采笑道：“荆山香溪的灵气所钟，我们秭归注定要出一位公主。”
 
-<hr><a href="wzj07.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj07.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
