--- a/ebooks/modern/history_gy/wangzaojun/wzj07.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj07.html
@@ -378,6 +378,6 @@
 <p>
 　　“你先回宫。”皇帝的声音已相当激动了：“我立刻要抓毛延寿来杀掉！”
 
-<hr><a href="wzj08.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj08.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
