--- a/ebooks/modern/history_gy/wangzaojun/wzj08.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj08.html
@@ -339,6 +339,6 @@
 　　太后对这件事很生气，当夜就派人通知皇帝：次日朝罢到慈宁宫，她有话说。
 
 
-<hr><a href="wzj09.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj09.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
