--- a/ebooks/modern/history_gy/wangzaojun/wzj09.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj09.html
@@ -398,6 +398,6 @@
 　　 “过得去就好。”皇帝吩咐：“召中书！”
 
 
-<hr><a href="wzj10.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj10.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
