--- a/ebooks/modern/history_gy/wangzaojun/wzj10.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj10.html
@@ -243,6 +243,6 @@
 　　 “对！对！”石显向史衡之说：“替我赏傅婆婆两匹绢。”
 
 
-<hr><a href="wzj11.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj11.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
