--- a/ebooks/modern/history_gy/wangzaojun/wzj12.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj12.html
@@ -249,6 +249,6 @@
  ，怎么连络史衡之，走了以后该做些什么？你跟老毛好好商量一下。”
 
 
-<hr><a href="wzj13.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj13.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
