--- a/ebooks/modern/history_gy/wangzaojun/wzj13.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj13.html
@@ -261,6 +261,6 @@
  一阵。
 
 
-<hr><a href="wzj14.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj14.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
