--- a/ebooks/modern/history_gy/wangzaojun/wzj14.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj14.html
@@ -292,6 +292,6 @@
  还是昭君？太后不免困惑，唯有付之叹息而已。
 
 
-<hr><a href="wzj15.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj15.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
