--- a/ebooks/modern/history_gy/wangzaojun/wzj15.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj15.html
@@ -306,6 +306,6 @@
 　　 因此，匡衡受命，星夜急驰，尽可能早日与呼韩邪会面，消弭兵祸——当然，除却丧权
  辱国的条件不能接受以外，希望昭君亦能留下而不遣。所以匡衡的任务是相当艰难的。
 
-<hr><a href="wzj16.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj16.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
