--- a/ebooks/modern/history_gy/wangzaojun/wzj16.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj16.html
@@ -331,6 +331,6 @@
  藉，直到晓钟动时，皇帝方始别去。
 
 
-<hr><a href="wzj17.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj17.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
