--- a/ebooks/modern/history_gy/wangzaojun/wzj17.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj17.html
@@ -312,6 +312,6 @@
 <p>
 　　 于是皇帝松了手，而太后亦就毫无顾视地走了。
 
-<hr><a href="wzj18.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj18.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
