--- a/ebooks/modern/history_gy/wangzaojun/wzj20.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj20.html
@@ -245,6 +245,6 @@
 　　昭君驯顺地膝行而前，皇帝一把揽在怀中。月色斜照，经过泪水润泽的一张脸，更显得
 白里透红，光润无比。皇帝忍不住伸手去抚摸——极轻，极轻地……
 
-<hr><a href="wzj21.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj21.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
