--- a/ebooks/modern/history_gy/wangzaojun/wzj21.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj21.html
@@ -801,6 +801,6 @@
 今可是要挺起脊粱来做自己的主了，料定终究仍会以宁胡长公主的身份和番，将来不管会吃
 多少苦，但叫青史留名，便不枉了这一生！
 
-<hr><a href="wzj22.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj22.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
