--- a/ebooks/modern/history_gy/wangzaojun/wzj22.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj22.html
@@ -226,6 +226,6 @@
 　　韩文越发羞得头都抬不起来。昭君便趁势替她理一理头上的金步摇，然后取一幅鲛绡，
 轻轻拢在她头上，因为此去骑马，怕九陌红尘，染污了她的头发。
 
-<hr><a href="wzj23.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj23.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
