--- a/ebooks/modern/history_gy/wangzaojun/wzj23.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj23.html
@@ -415,6 +415,6 @@
 这七八月的聚首之中，尽量相慰，更是林采与昭君共有的感觉。因此，这两个做姊姊的人，
 从这天起，几乎与韩文寝食不离，形影相共。
 
-<hr><a href="wzj24.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj24.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
