--- a/ebooks/modern/history_gy/wangzaojun/wzj25.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj25.html
@@ -527,6 +527,6 @@
 <p>
 　　因此，昭君絮絮相询，而陈汤亦不厌其详地作了解释，一直谈到四更天方散。
 
-<hr><a href="wzj26.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj26.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
