--- a/ebooks/modern/history_gy/wangzaojun/wzj26.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj26.html
@@ -266,6 +266,6 @@
 　　这样一想，对于胡里图的要求，自再无犹豫之理，点点头说：“我听胡将军的安排就
 是。”
 
-<hr><a href="wzj27.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj27.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
