--- a/ebooks/modern/history_gy/wangzaojun/wzj28.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj28.html
@@ -487,6 +487,6 @@
 　　皇帝黯然地叹口无声的气，一步重似一步地踱了出去。昭君心里当然很难过，但强制克
 制着自己，保持漠然的脸色。
 
-<hr><a href="wzj29.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj29.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
