--- a/ebooks/modern/history_gy/wangzaojun/wzj30.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj30.html
@@ -766,6 +766,6 @@
 <p>
 　　“谁也不了解她。”林采在心中自语：“千秋万世，没有一个人会了解昭君。”
 
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 
 </body></html>
