--- a/ebooks/modern/history_gy/wangzaojun/wzj02.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj02.html
@@ -377,6 +377,6 @@
 <p>
 　　说完，傅婆婆就走了。
 
-<hr><a href="wzj03.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj03.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
