--- a/ebooks/modern/history_gy/wangzaojun/wzj03.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj03.html
@@ -300,6 +300,6 @@
 <p>
 　　毛延寿想了一下，深深点头，“言之有理！”他说：“明天见机行事。”
 
-<hr><a href="wzj04.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj04.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
