--- a/ebooks/modern/history_gy/wangzaojun/wzj11.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj11.html
@@ -314,6 +314,6 @@
 　　 于是点点头，含含糊糊地答说：“我知道。”
 
 
-<hr><a href="wzj12.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj12.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
