--- a/ebooks/modern/history_gy/wangzaojun/wzj18.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj18.html
@@ -300,6 +300,6 @@
 　　 “是！长安见。”毛延寿眼圈有些红了，做足了相处日久，依依难舍的神态。
 
 
-<hr><a href="wzj19.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj19.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
