--- a/ebooks/modern/history_gy/wangzaojun/wzj19.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj19.html
@@ -313,6 +313,6 @@
 <p>
 　　“是，是！”陈汤也仿佛醒悟了的样子，闭口不言了。
 
-<hr><a href="wzj20.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj20.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
