--- a/ebooks/modern/history_gy/wangzaojun/wzj24.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj24.html
@@ -255,6 +255,6 @@
 胡商往来，心里发痒，如果放他出府，他一定会去找相熟的胡商探问动静。那一来，一条反
 间计就有成功的可能了。
 
-<hr><a href="wzj25.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj25.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
