--- a/ebooks/modern/history_gy/wangzaojun/wzj27.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj27.html
@@ -456,6 +456,6 @@
 <p>
 　　只点点头说：“好的！我待命就是。”
 
-<hr><a href="wzj28.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj28.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
