--- a/ebooks/modern/history_gy/wangzaojun/wzj29.html
+++ b/ebooks/modern/history_gy/wangzaojun/wzj29.html
@@ -268,6 +268,6 @@
 　　果然，匡衡听得有胡里图“保驾”，宽心大放，第二天高高兴兴地护送昭君上路，直往
 河东而去。
 
-<hr><a href="wzj30.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="wzj30.html">下一章</a>  <a href="content.html">回目录</a>
 
 </body></html>
