--- a/ebooks/modern/history_gy/dajiangcaobin/djcb01.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb01.html
@@ -288,5 +288,5 @@
 <p>
 　　光义和赵普，大为失望，但天语如此，无可奈何，也只好搁置着，另觅适当的
 机会再进言。
-<hr><a href="djcb02.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb02.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
