--- a/ebooks/modern/history_gy/dajiangcaobin/djcb02.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb02.html
@@ -345,5 +345,5 @@
 <p>
 　　保护归人，用心如此深厚，设想如此绵密，孙遇和杨蠲，心诚悦服，感激涕零；
 两人同时离席，一揖到地，异口同声地说：“唯公所命！”
-<hr><a href="djcb03.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb03.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
