--- a/ebooks/modern/history_gy/dajiangcaobin/djcb03.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb03.html
@@ -260,5 +260,5 @@
 <p>
 　　于是皇帝出临崇德殿赐安，在更番军乐演奏声中，酌酒与每一个将校。同时分
 赏金玉带、宫锦战袍，以及安家的绢帛银米；按照职位高下，每人一份。
-<hr><a href="djcb04.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb04.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
