--- a/ebooks/modern/history_gy/dajiangcaobin/djcb04.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb04.html
@@ -211,5 +211,5 @@
 在后方静候捷报。”
 <p>
 　　“放心，放心，只传捷之日，李公休忘了送霜红来！”
-<hr><a href="djcb05.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb05.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
