--- a/ebooks/modern/history_gy/dajiangcaobin/djcb05.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb05.html
@@ -259,5 +259,5 @@
 在心里，到有一天发作，可就够你受的了！”
 <p>
 　　“是，是！”曹彬连连答应，庄容拜揖：“某受教！”
-<hr><a href="djcb06.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb06.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
