--- a/ebooks/modern/history_gy/dajiangcaobin/djcb06.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb06.html
@@ -883,5 +883,5 @@
 <p>
 　　这一调动的效果很好，没有经历过风涛的弟兄们，在水师的慰抚鼓励之下，逐
 渐胆壮能够涉险不惊了。
-<hr><a href="djcb07.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb07.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
