--- a/ebooks/modern/history_gy/dajiangcaobin/djcb07.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb07.html
@@ -783,5 +783,5 @@
 　　于是张廷翰收缴了蜀军的全部兵器，把他们集中在一起看管点编，留下一部份
 人处理，同时派人往战舰上报捷联络；其余的乘胜挺进——得胜关只有三百蜀军，
 闻风而降，势所必然。
-<hr><a href="djcb08.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb08.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
