--- a/ebooks/modern/history_gy/dajiangcaobin/djcb08.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb08.html
@@ -143,5 +143,5 @@
 　　“是的。”
 <p>
 　　“那就全力前进吧！”刘光乂又下令：“让我们早早发现鸣镝。”
-<hr><a href="djcb09.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb09.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
