--- a/ebooks/modern/history_gy/dajiangcaobin/djcb09.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb09.html
@@ -518,5 +518,5 @@
 怒而处置了袁德宏。这是借刀杀人之计，自然不能上他的当；而周副使居然点破了
 诡计，可见他是顾虑袁德宏的安全。这就好办了；谅吴校尉的身份地位，未见得能
 发生多大的作用，且不必去理他。
-<hr><a href="djcb10.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb10.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
