--- a/ebooks/modern/history_gy/dajiangcaobin/djcb10.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb10.html
@@ -168,5 +168,5 @@
 不是望风而降，有李进卿的部队也一定压制得住。现在最要紧的是接应，所以一见
 杨光美，曹彬立即以副帅的身份下令，前队全速前进。接着便匆匆下了游艇，回中
 军坐船去见刘光乂，商议进军夔州的计划。
-<hr><a href="djcb11.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb11.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
