--- a/ebooks/modern/history_gy/dajiangcaobin/djcb11.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb11.html
@@ -418,5 +418,5 @@
 了火头，顿时轰轰烈烈地烧将起来。
 <p>
 　　火光影里，遥见高彦俦望西北再拜，叩谢君思，然后端坐闭目——
-<hr><a href="djcb12.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb12.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
