--- a/ebooks/modern/history_gy/dajiangcaobin/djcb12.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb12.html
@@ -210,5 +210,5 @@
 火墙。江面当风，烈焰飞卷，于是南城寨上，树起一面白旗，宋军高声欢呼，山鸣
 谷应。再看羊角山中，混战的局势已经结束，被缴了械的蜀军，正会同宋军在扑灭
 寨中的大火。
-<hr><a href="djcb13.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb13.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
