--- a/ebooks/modern/history_gy/dajiangcaobin/djcb13.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb13.html
@@ -216,5 +216,5 @@
 山绝险，无路可通，到诸葛亮相蜀，方始凿石架空，构筑飞阁，作为通路；这一段
 栈道，与北面的秦栈相对而言，称为蜀栈，又称为南栈道；三十里寸寸皆险，王全
 斌一再告诫：行军小心；而雾封云锁，苔滑霜浓，仍不断有人掉落万丈悬崖之中。
-<hr><a href="djcb14.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb14.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
