--- a/ebooks/modern/history_gy/dajiangcaobin/djcb14.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb14.html
@@ -240,5 +240,5 @@
 <p>
 　　就这样缓缓行去，第一天宿新都、第二天到广汉、第三天到德阳、第四天到罗
 江、第五天到绵州，正好是广政二十七年除夕，自然是在这里过了年再作道理。
-<hr><a href="djcb15.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb15.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
