--- a/ebooks/modern/history_gy/dajiangcaobin/djcb15.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb15.html
@@ -322,5 +322,5 @@
 <p>
 　　“刷”地一下，史延德抽了王昭远一马鞭子，“你他妈的奔丧！”他破口大骂：
 “教你儿子来奔你的丧。”
-<hr><a href="djcb16.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb16.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
