--- a/ebooks/modern/history_gy/dajiangcaobin/djcb16.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb16.html
@@ -73,5 +73,5 @@
 <p>
 　　石(君页)知道大势已去，黯然叩别御座；出宫四顾，茫茫然无所适从，思量了
 半天，连家都不回，弃去官服，悄然投青城山而去。
-<hr><a href="djcb17.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb17.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
