--- a/ebooks/modern/history_gy/dajiangcaobin/djcb17.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb17.html
@@ -455,5 +455,5 @@
 京城，面奏天子，取旨定夺，你看可好？”
 <p>
 　　照这样入情入理的说法，康延泽觉得无可推辞，也不须推辞了，于是欣然应诺。
-<hr><a href="djcb18.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb18.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
