--- a/ebooks/modern/history_gy/dajiangcaobin/djcb18.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb18.html
@@ -300,5 +300,5 @@
 拯溺之怀，以尽招携之礼，而卿果能率官属而请命，拜表疏以祈恩，托以慈亲，保
 其宗祀，悉封府库，以待王师，追咎改图，将自求于多福；匿瑕含垢，当尽涤于前
 非。朕不食言，尔无他虑！
-<hr><a href="djcb19.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb19.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
