--- a/ebooks/modern/history_gy/dajiangcaobin/djcb19.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb19.html
@@ -84,5 +84,5 @@
 得也陪她落了几滴眼泪。
 <p>
 　　“但愿生个男儿！”他默默地祷视着，“孟氏的血胤就可以不绝了！”
-<hr><a href="djcb20.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb20.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
