--- a/ebooks/modern/history_gy/dajiangcaobin/djcb20.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb20.html
@@ -252,5 +252,5 @@
 　　“赵家天子得知此事，不知如何想法？”他问。
 <p>
 　　“自然是发怒，必有振饬纪纲的诏旨。”
-<hr><a href="djcb21.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb21.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
