--- a/ebooks/modern/history_gy/dajiangcaobin/djcb21.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb21.html
@@ -312,5 +312,5 @@
 气要维持，闭城而守，过于示弱，所以我必顺要让廷翰替我打个胜仗。”
 <p>
 　　听他这么说，曹彬不便再持异议，答应第二天就把张廷翰派过来。
-<hr><a href="djcb22.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb22.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
