--- a/ebooks/modern/history_gy/dajiangcaobin/djcb23.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb23.html
@@ -298,5 +298,5 @@
 <p>
 　　这话不必回答，只要老母不像今天这般杜门礼佛，他就可以放一半的心了；另
 一半要看赵家天子如何？
-<hr><a href="djcb24.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb24.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
