--- a/ebooks/modern/history_gy/dajiangcaobin/djcb24.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb24.html
@@ -272,5 +272,5 @@
 帝降敕：辍朝五日，由内库发白布一千疋，供百官制素服发哀；依从孟家的意思，
 葬在洛阳，派兵三千人护丧。铭族上所写的官位，已不是“中书令、秦国公”，而
 是“赠尚书令，追封楚王”。
-<hr><a href="djcb25.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb25.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
