--- a/ebooks/modern/history_gy/dajiangcaobin/djcb25.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb25.html
@@ -372,5 +372,5 @@
 　　守沱江的王仁赡也打了个大胜仗。自新繁突围的乱党，中途分道：“全师雄的
 部将元裕，领了一万人，折而往北，恰好与王仁赡遭遇，一场硬仗，生擒了元裕。
 乱党溃不成军，为王仁赡的那三千人四下追杀，斩首五千级之多。
-<hr><a href="djcb26.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb26.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
