--- a/ebooks/modern/history_gy/dajiangcaobin/djcb26.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb26.html
@@ -195,5 +195,5 @@
 　　婚礼虽简，但很热闹，因为新郎官的贺客多——当然都是他的同袍；凑齐份子，
 自办喜筵，不用女家费心。闹够了酒，把新郎送入洞房；洞房就在女家。刚赋好逑，
 旋唱骊歌，送行的行列中，多的是刚刚开脸的新娘子。
-<hr><a href="djcb27.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb27.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
