--- a/ebooks/modern/history_gy/dajiangcaobin/djcb27.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb27.html
@@ -286,5 +286,5 @@
 <p>
 　　于是从第二天起，吴乡约就开始筹备喜事；平日都是他帮人家的忙，现在他家
 有事，亦不愁无人帮忙。反倒是张惠龙闲着无事，只等着做现成新郎官。
-<hr><a href="djcb28.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb28.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
