--- a/ebooks/modern/history_gy/dajiangcaobin/djcb28.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb28.html
@@ -89,5 +89,5 @@
 　　这才真的是傻话，张惠龙觉得怎么回答也不合适，只好用同样的话作答：“我
 也怕，怕见不着你！”他越发把她搂紧了：“所以，在一起的时候不要错过！你晓
 得我此刻心里怎么在想？我在想：最好两个人化作一个人！”
-<hr><a href="djcb29.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb29.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
