--- a/ebooks/modern/history_gy/dajiangcaobin/djcb30.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb30.html
@@ -207,5 +207,5 @@
 朝夕顾问，曹彬必能克尽阙职。”
 <p>
 　　“好好！”皇帝欣然同意。
-<hr><a href="djcb31.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb31.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
