--- a/ebooks/modern/history_gy/dajiangcaobin/djcb31.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb31.html
@@ -63,5 +63,5 @@
 　　回到私宅，贺客未散；曹彬依然不肯受贺，从后门溜了进去，一直到他平日读
 书的小阁，展开两幅地图，一幅是河南北汉，一幅是江南南唐，默默地沉思着，忘
 却富贵荣辱，专心一志地在研究皇帝所交付的任务！
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 </body></html>
