--- a/ebooks/modern/history_gy/dajiangcaobin/djcb22.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb22.html
@@ -170,5 +170,5 @@
 一刑场；被刑的米光绪，死后又复枭首，用小木笼子盛了，传遍各营，以昭炯戒。
 接着各城门都贴出“誊黄”的谕旨；成都百姓的一口冤气平了下去，对朝廷的信心
 也就同时恢复了。
-<hr><a href="djcb23.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb23.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
