--- a/ebooks/modern/history_gy/dajiangcaobin/djcb29.html
+++ b/ebooks/modern/history_gy/dajiangcaobin/djcb29.html
@@ -239,5 +239,5 @@
 <p>
 　　原来如此！李崇矩心中有数，皇弟光义有布恩之意，赵普不过承皇弟的意旨而
 已。
-<hr><a href="djcb30.html">下一章</a>  <a href="_content.html">回目录</a>
+<hr><a href="djcb30.html">下一章</a>  <a href="content.html">回目录</a>
 </body></html>
