--- a/ebooks/modern/history_gy/lihongzhang/lhz03.html
+++ b/ebooks/modern/history_gy/lihongzhang/lhz03.html
@@ -1502,4 +1502,4 @@
 <p>
 　　（第三章完）
 
-<a href="lhz04.html">下一章</a>　<a href="_content.html">回目录</a>
+<a href="lhz04.html">下一章</a>　<a href="content.html">回目录</a>
