--- a/ebooks/modern/history_gy/lihongzhang/lhz04.html
+++ b/ebooks/modern/history_gy/lihongzhang/lhz04.html
@@ -644,4 +644,4 @@
 <p>
 　　（第四章完）
 
-<a href="lhz05.html">下一章</a>　<a href="_content.html">回目录</a>
+<a href="lhz05.html">下一章</a>　<a href="content.html">回目录</a>
