--- a/ebooks/modern/history_gy/lihongzhang/lhz07.html
+++ b/ebooks/modern/history_gy/lihongzhang/lhz07.html
@@ -477,4 +477,4 @@
 <p>
 　　（第七章完）
 
-<a href="lhz08.html">下一章</a>　<a href="_content.html">回目录</a>
+<a href="lhz08.html">下一章</a>　<a href="content.html">回目录</a>
