--- a/ebooks/modern/history_gy/lihongzhang/lhz02.html
+++ b/ebooks/modern/history_gy/lihongzhang/lhz02.html
@@ -700,4 +700,4 @@
 <p>
 　　（第二章完）
 
-<a href="lhz03.html">下一章</a>　<a href="_content.html">回目录</a>
+<a href="lhz03.html">下一章</a>　<a href="content.html">回目录</a>
