--- a/ebooks/modern/history_gy/lihongzhang/lhz05.html
+++ b/ebooks/modern/history_gy/lihongzhang/lhz05.html
@@ -936,4 +936,4 @@
 <p>
 　　（第五章完）
 
-<a href="lhz06.html">下一章</a>　<a href="_content.html">回目录</a>
+<a href="lhz06.html">下一章</a>　<a href="content.html">回目录</a>
