--- a/ebooks/modern/history_gy/lihongzhang/lhz06.html
+++ b/ebooks/modern/history_gy/lihongzhang/lhz06.html
@@ -596,4 +596,4 @@
 <p>
 　　（第六章完）
 
-<a href="lhz07.html">下一章</a>　<a href="_content.html">回目录</a>
+<a href="lhz07.html">下一章</a>　<a href="content.html">回目录</a>
