--- a/ebooks/modern/history_gy/lihongzhang/lhz08.html
+++ b/ebooks/modern/history_gy/lihongzhang/lhz08.html
@@ -820,4 +820,4 @@
 <p>
 　　（第八章完）
 
-<a href="lhz09.html">下一章</a>　<a href="_content.html">回目录</a>
+<a href="lhz09.html">下一章</a>　<a href="content.html">回目录</a>
