--- a/ebooks/modern/history_gy/lihongzhang/lhz09.html
+++ b/ebooks/modern/history_gy/lihongzhang/lhz09.html
@@ -1738,4 +1738,4 @@
 <p>
 　　（第九章完）
 
-<a href="lhz10.html">下一章</a>　<a href="_content.html">回目录</a>
+<a href="lhz10.html">下一章</a>　<a href="content.html">回目录</a>
